k8s/fabric/nodes/cli.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-cli
  namespace: fabric
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric-cli
  template:
    metadata:
      labels:
        app: fabric-cli
    spec:
      containers:
        - name: fabric-cli
          image: hyperledger/fabric-tools:2.4.1
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "sleep 48h"]
          volumeMounts:
            - name: fabric-volume
              mountPath: /var/hyperledger/fabric
            # 从 fabric-config cm 中挂载配置文件 到 /var/hyperledger/fabric/config
            - name: fabric-config-volume
              mountPath: /var/hyperledger/fabric/config
      volumes:
        - name: fabric-volume
          persistentVolumeClaim:
            claimName: fabric-pvc
        - name: fabric-config-volume
          configMap:
            name: fabric-config
