k8s/fabric/nodes/org1-peer0.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org1-peer0
  namespace: fabric
spec:
  replicas: 1
  selector:
    matchLabels:
      app: org1-peer0
  template:
    metadata:
      labels:
        app: org1-peer0
    spec:
      containers:
        - name: org1-peer0
          image: hyperledger/fabric-peer:2.4.1
          imagePullPolicy: IfNotPresent
          command: ["peer", "node", "start"]
          # command: ["sh", "-c", "sleep 48h"]
          volumeMounts:
            - name: fabric-volume
              mountPath: /var/hyperledger/fabric
            - name: fabric-config-volume
              mountPath: /var/hyperledger/fabric/config
            - name: fabric-org1peer0-volume
              mountPath: /var/hyperledger/production
      volumes:
        - name: fabric-volume
          persistentVolumeClaim:
            claimName: fabric-pvc
        - name: fabric-config-volume
          configMap:
            name: fabric-config
        - name: fabric-org1peer0-volume
          persistentVolumeClaim:
            claimName: fabric-org1peer0-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: org1-peer0
  namespace: fabric
spec:
  type: ClusterIP
  selector:
    app: org1-peer0
  ports:
    - name: general
      port: 7051
      protocol: TCP
    - name: chaincode
      port: 7052
      protocol: TCP
    - name: operation
      port: 9444
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app: org1-peer0
  name: org1-peer0
  namespace: fabric
spec:
  ingressClassName: nginx
  rules:
    - host: org1-peer0.fabric.svc.cluster.local
      http:
        paths:
          - backend:
              service:
                name: org1-peer0
                port:
                  name: general
            path: /
            pathType: ImplementationSpecific
